# stock-helper-v2

./: .gitignore  README.md  check_filter.py  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: auto-release.yml  release.yml
scripts/: bump-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai_cmd.rs  ai_pick_cmd.rs  backtest_cmd.rs  market_cmd.rs  mod.rs  news_cmd.rs  pool_cmd.rs  settings_cmd.rs  smart_stock_cmd.rs  stock_cmd.rs  strategy_cmd.rs  tracking_cmd.rs  watchlist_cmd.rs
src-tauri/src/db/: database.rs
src-tauri/src/models/: agent_prompt.rs  ai.rs  backtest.rs  mod.rs  news.rs  settings.rs  stock.rs  strategy.rs  tracking.rs  watchlist.rs
src-tauri/src/services/: ai_service.rs  backtest_engine.rs  history_kline.rs  labeling.rs  market_overview.rs  market_pool.rs  market_scanner.rs  mod.rs  news_service.rs  scheduler.rs  scoring.rs  smart_stock.rs  stock_data.rs  stock_tools.rs  technical_indicators.rs  thematic_scoring.rs
src-tauri/src/utils/: encoding.rs  http.rs  mod.rs  retry.rs
src-tauri/tests/: test_nlp_tools.rs
src/components/: AIStreamPanel.tsx  AgentPromptModal.tsx  BacktestChart.tsx  InstructionTag.tsx  KlineChart.tsx  LossAnalysisPanel.tsx  ScoreBadge.tsx  StatusBar.tsx  StockTable.tsx  TagLabel.tsx  TechnicalPanel.tsx  UpdateModal.tsx  WatchlistDiagnosePanel.tsx
src/hooks/: useStockRefresh.ts  useTauri.ts
src/pages/: AIPick.tsx  Backtest.tsx  MarketOverview.tsx  (+5 more)
(+16 files in other folders)
